<resources>
    <string name="app_name">LinearLayout</string>

    <string name="carrito">Carrito de la compra</string>
    <string name="prod1">Producto 1</string>
    <string name="prod2">Producto 2</string>
    <string name="prod3">Producto 3</string>
    <string name="ud">unidades</string>
    <string name="enviar">Enviar por correo electrónico</string>
    <string name="importe">Importe</string>
    <string name="iva">I.V.A.</string>
    <string name="total">Total</string>
    <string name="volver">Volver</string>
    <string name="confirmar">Confirmar</string>
    <string name="num_importe">000.00</string>
    <string name="num_iva">00.00</string>
    <string name="num_total">0000.00</string>
    <string name="euros">€</string>

</resources>
