<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#050505"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carrito"
        android:id="@+id/tVcarrito"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#FFFFFF"
        android:textSize="20dp" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        android:layout_alignBottom="@id/tVcarrito"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prod1"
                android:id="@+id/tVprod1"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prod2"
                android:id="@+id/tVprod2"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prod3"
                android:id="@+id/tVprod3"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="2"
                    android:id="@+id/eTcantidad1"
                    android:background="#FFFFFF"
                    android:textSize="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ud"
                    android:id="@+id/tVud1"
                    android:textColor="#FFFFFF"
                    android:gravity="right"
                    android:textSize="20dp"
                    android:layout_margin="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="2"
                    android:id="@+id/eTcantidad2"
                    android:background="#FFFFFF"
                    android:textSize="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ud"
                    android:id="@+id/tVud2"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp"
                    android:gravity="right"
                    android:layout_margin="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="2"
                    android:id="@+id/eTcantidad3"
                    android:background="#FFFFFF"
                    android:textSize="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ud"
                    android:id="@+id/tVud3"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp"
                    android:gravity="right"
                    android:layout_margin="10dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:id="@+id/bTenviar" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        android:layout_alignBottom="@id/bTenviar"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/importe"
                android:id="@+id/tVimporte"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iva"
                android:id="@+id/tViva"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:id="@+id/tVtotal"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_importe"
                    android:id="@+id/tVnumImporte"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp"
                    android:layout_marginRight="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/euros"
                    android:id="@+id/tVeurosImp"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp"
                    android:gravity="right"
                    android:layout_marginRight="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_iva"
                    android:id="@+id/tVnumIva"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp"
                    android:layout_marginRight="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/euros"
                    android:id="@+id/tVeurosIva"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp"
                    android:gravity="right"
                    android:layout_marginRight="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_total"
                    android:id="@+id/tVnumTotal"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp"
                    android:layout_marginRight="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/euros"
                    android:id="@+id/tVeurosTot"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp"
                    android:gravity="right"
                    android:layout_marginRight="10dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        android:layout_alignTop="@id/bTvolver"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volver"
            android:id="@+id/bTvolver"
            android:width="1dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmar"
            android:id="@+id/bTconfirmar"
            android:width="1dp"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
